--- a/0x00-html_advanced/15-index.html
+++ b/0x00-html_advanced/15-index.html
@@ -12,13 +12,13 @@
   <header>
     <div>
     <span>Techium</span>
-    </div>
     <nav>
     </nav>
+    </div>
   </header>
   <main>
     <h1>Homepage</h1>
-    <section><h2>We help you build your brand!</h2></section>
+    <section><div><h2>We help you build your brand!</h2></div></section>
     <section>
       <div>
       <h2>Services</h2>
@@ -76,9 +76,9 @@
       <div>
       <h2>Testimonials</h2>
       <p>We are more than a digital company</p>
-      <article>Testimonial #1</article>
-      <article>Testimonial #2</article>
-      <article>Testimonial #3</article>
+      <article>Testimonial 1</article>
+      <article>Testimonial 2</article>
+      <article>Testimonial 3</article>
       </div>
     </section>
     <section>
