--- a/0x00-html_advanced/25-index.html
+++ b/0x00-html_advanced/25-index.html
@@ -88,7 +88,7 @@
           <h3>How we work</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
         </div>
-        <a href="./about.html">Learn more about us</a>
+        <a href="about.html">Learn more about us</a>
       </div>
     </section>
 
@@ -143,7 +143,7 @@
         <div>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
         </div>
-        <a href="./contact.html">Get in touch</a>
+        <a href="contact.html">Get in touch</a>
       </div>
     </section>
   </main>
@@ -159,9 +159,9 @@
     </div>
     <div>
       <ul>
-        <li> <a href="#">Terms of Use</a> </li>
-        <li> <a href="#">Privacy Policy</a> </li>
-        <li> <a href="#">Cookie Policy</a> </li>
+        <li><a href="#">Terms of Use</a></li>
+        <li><a href="#">Privacy Policy</a></li>
+        <li><a href="#">Cookie Policy</a></li>
       </ul>
     </div>
   </footer>
