--- a/0x00-html_advanced/33-styleguide.html
+++ b/0x00-html_advanced/33-styleguide.html
@@ -112,7 +112,7 @@
         <p>Curabitur sit amet turpis cursus massa mollis <mark>highlighted</mark>. Duis finibus leo massa, eget dapibus erat finibus sed. Aenean condimentum sapien magna, eleifend <mark>highlighted</mark> mi consequat ut. Cras nec quam sed sapien ultricies <mark>highlighted</mark> ut sed metus.</p>
       </div>
     </section>
-    
+    <br>
     <!-- Table -->
     <section>
       <header>
@@ -125,7 +125,7 @@
           <tr>
             <th scope="col">Title</th>
             <th scope="col">Director</th>
-            <th scope="col">Relese Data</th>
+            <th scope="col">Release Data</th>
           </tr>
         </thead>
         <tbody>
