--- a/0x00-html_advanced/index.html
+++ b/0x00-html_advanced/index.html
@@ -9,37 +9,37 @@
 <link rel="icon" type="image/png" href="./favicon.png">
 </head>
 <body>
-
+<br>
 <!-- Header -->
 <header>
 <div>
   <div>
-    <a href="/"><img src="./logo-black.png" alt="Techium" width="160" height="40"> </a>
+    <a href="/"><img src="logo-black.png" alt="Techium logo" width="160" height="40"> </a>
   </div>
   <nav>
     <ul>
       <li><a href="/">Home</a></li>
-      <li><a href="services">Services</a></li>
-      <li><a href="works">Works</a></li>
-      <li><a href="about">About</a></li>
-      <li><a href="latest_news">Latest news</a></li>
-      <li><a href="testimonials">Testimonials</a></li>
-      <li><a href="contact">Contact</a></li>
+      <li><a href="#services">Services</a></li>
+      <li><a href="#works">Works</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#latest_news">Latest news</a></li>
+      <li><a href="#testimonials">Testimonials</a></li>
+      <li><a href="#contact">Contact</a></li>
     </ul>
   </nav>
 </div>
 </header>
-
+<br>
 <!-- Main -->
 <main>
 <h1>Homepage</h1>
-
+<br>
 <!-- Hero section -->
 <section>
   <h2>We help you build your brand!</h2>
   <a href="#">Get started</a>
 </section>
-
+<br>
 <!-- Services section -->
 <section>
   <div>
@@ -57,7 +57,7 @@
     </div>
   </div>
 </section>
-
+<br>
 <!-- Works section -->
 <section>
   <div>
@@ -84,7 +84,7 @@
           </div>
         </div>
       </section>
-
+      <br>
       <!-- About Us section -->
       <section>
         <div>
@@ -104,7 +104,7 @@
           <a href="./about.html">Learn more about us</a>
         </div>
       </section>
-
+      <br>
       <!-- Latest news section -->
       <section>
         <div>
@@ -142,7 +142,7 @@
           </div>
         </div>
       </section>
-
+      <br>
       <!-- Testimonials section -->
       <section>
         <div>
@@ -153,26 +153,29 @@
           <div>
             <article>
               <img src="./images/pic-person-01.jpg" alt="Yuri Y. avatar" width="100px" height="100px">
-              <blockquote cite="Yuri Y.">
-                I am completely blown away. Thanks to Techium, we've just launched our 5th website!
+              <blockquote>
+                <p>I am completely blown away. Thanks to Techium, we've just launched our 5th website!</p>
+                <cite>Yuri Y.</cite>
               </blockquote>
             </article>
             <article>
               <img src="./images/pic-person-02.jpg" alt="Dorrie S. avatar" width="100px" height="100px">
-              <blockquote cite="Dorrie S.">
-                Thank you so much for your help. Techium company is awesome!
+              <blockquote>
+                <p>Thank you so much for your help. Techium company is awesome!</p>
+                <cite>Dorrie S.</cite>
               </blockquote>
             </article>
             <article>
               <img src="./images/pic-person-03.jpg" alt="Sven H. avatar" width="100px" height="100px">
-              <blockquote cite="Sven H.">
-                I love your system. Definitely worth the investment. I'd be lost without Techium company.
+              <blockquote>
+                <p>I love your system. Definitely worth the investment. I'd be lost without Techium company.</p>
+                <cite>Sven H.</cite>
               </blockquote>
             </article>
           </div>
         </div>
       </section>
-
+      <br>
       <!-- Contact section -->
       <section>
         <div>
@@ -183,14 +186,14 @@
           <div>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
           </div>
-          <a href="./contact.html">Get in touch</a>
+          <a href="contact.html">Get in touch</a>
         </div>
       </section>
     </main>
-
+  <br>
   <!--Footer-->
   <footer>
-    <img src="./logo-black.png" alt="Techium logo" width="160" height="40">
+    <img src="logo-black.png" alt="Techium logo" width="160" height="40">
     <address>
       234 Washington Street <br>
       Urbana, Illinois
