--- a/0x00-html_advanced/styleguide.html
+++ b/0x00-html_advanced/styleguide.html
@@ -31,7 +31,7 @@
       <p>This is my subtitle</p>
       <p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
     </section>
-
+    <br>
     <!-- Lists -->
     <section>
       <header>
@@ -61,7 +61,7 @@
         </div>
       </header>
     </section>
-
+    <br>
     <!-- Horizontal rule -->
     <section>
       <header>
@@ -71,7 +71,7 @@
         </div>
       </header>
     </section>
-
+    <br>
     <!-- Blockquotes -->
     <section>
       <header>
@@ -83,12 +83,13 @@
       </div>
       <div>
         <h3>Blockquote</h3>
-        <blockquote cite="Kanye West, Musician">
-          I will be the leader of a company that ends up being worth billions of dollars, because I got the answers. I understand culture. I am the nucleus. I think that’s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at.
+        <blockquote>
+          <p>I will be the leader of a company that ends up being worth billions of dollars, because I got the answers. I understand culture. I am the nucleus. I think that’s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at.</p>
+          <cite>Kanye West, Musician</cite>
         </blockquote>
       </div>
     </section>
-
+    <br>
     <!-- Typography -->
     <section>
       <header>
@@ -112,7 +113,7 @@
         <p>Curabitur sit amet turpis cursus massa mollis <mark>highlighted</mark>. Duis finibus leo massa, eget dapibus erat finibus sed. Aenean condimentum sapien magna, eleifend <mark>highlighted</mark> mi consequat ut. Cras nec quam sed sapien ultricies <mark>highlighted</mark> ut sed metus.</p>
       </div>
     </section>
-
+    <br>
     <!-- Table -->
     <section>
       <header>
@@ -125,7 +126,7 @@
           <tr>
             <th scope="col">Title</th>
             <th scope="col">Director</th>
-            <th scope="col">Relese Data</th>
+            <th scope="col">Release Date</th>
           </tr>
         </thead>
         <tbody>
@@ -148,7 +149,7 @@
         </tbody>
       </table>
     </section>
-
+    <br>
     <!-- Details -->
     <section>
       <header>
@@ -169,7 +170,7 @@
         </details>
       </div>
     </section>
-
+    <br>
     <!-- video -->
     <section>
       <header>
@@ -179,7 +180,7 @@
         Sorry, your browser doesn't support HTML5 video
       </video>
     </section>
-
+    <br>
     <!-- Audio -->
     <section>
       <header>
@@ -189,7 +190,7 @@
       Sorry, your browser doesn't support audio element
       </audio>
     </section>
-
+    <br>
     <!-- Iframe -->
     <section>
       <header>
