--- a/0x00-html_advanced/styleguide.html
+++ b/0x00-html_advanced/styleguide.html
@@ -36,6 +36,7 @@
     <section>
       <header>
         <h2>Lists</h2>
+      </header
         <div>
           <h3>Unordered</h3>
           <ul>
@@ -59,7 +60,6 @@
             <dd>A colorless, transparent, odorless liquid that forms the seas, lakes, rivers, and rain and is the basis of the fluids of living organisms.</dd>
           </dl>
         </div>
-      </header>
     </section>
     <br>
     <!-- Horizontal rule -->
