--- a/0x0A-Bootstrap/3-index.html
+++ b/0x0A-Bootstrap/3-index.html
@@ -14,8 +14,8 @@
     <body>
         <div class="container-lg p-5">
             <div class="row">
-                <div class="col-sm-4 mr-3 mt-4 p-0 card">
-                    <div>
+                <div class="col-sm mr-3 mt-4 p-0">
+                    <div class="card">
                         <div class="card-header">Coding</div>
                         <img src="https://via.placeholder.com/450x200" class="img-fluid" />
                         <div class="card-body">
@@ -26,8 +26,8 @@
                         <div class="card-footer">40h</div>
                     </div>
                 </div>
-                <div class="col-sm-4 mr-3 mt-4 p-0 card">
-                    <div>
+                <div class="col-sm mr-3 mt-4 p-0">
+                    <div class="card">
                         <div class="card-header">Coding</div>
                         <img src="https://via.placeholder.com/450x200" class="img-fluid" />
                         <div class="card-body">
@@ -38,8 +38,8 @@
                         <div class="card-footer">35h</div>
                     </div>
                 </div>
-                <div class="col-sm-4 mt-4 p-0 card">
-                    <div>
+                <div class="col-sm mt-4 p-0">
+                    <div class="card">
                         <div class="card-header">Coding</div>
                         <img src="https://via.placeholder.com/450x200" class="img-fluid" />
                         <div class="card-body">
