--- a/0x0D-JQuery_advanced/6-index.html
+++ b/0x0D-JQuery_advanced/6-index.html
@@ -19,15 +19,21 @@
           $("table").append($('<thead></thead>').append($('<th></th>').text('Firstname'), $('<th></th>').text('Lastname')));
           $("table").append("<tbody></tbody>");
         }
-        $.addNewMember = function(firstname, lastname) {
+        $.addNewMember = function(firstname, lastname, position) {
+          if (position == 'before') {
+          $("tbody").prepend($('<tr></tr>').append($('<td></td>').text(firstname), $('<td></td>').text(lastname), $('<td></td>').text("(x)").css("background-color", "orange").click(function(){ $(this).parent().remove();})));
+        } else {
           $("tbody").append($('<tr></tr>').append($('<td></td>').text(firstname), $('<td></td>').text(lastname), $('<td></td>').text("(x)").css("background-color", "orange").click(function(){ $(this).parent().remove();})));
-        }
+         }
+       }
+       $.createForm = function() {
+         $("table").before($('<input></input>', { type: 'text'}));
+         $("table").before($('<input></input>', { type: 'text'}));
+         $("table").before($('<select></select>').append($('<option></option>', {value: 'before'}).text('Before'), $('<option></option>', {value: 'after'}).text('After')));
+         $("table").before($('<input></input>', { type: 'submit'}).click(function () {$.addNewMember($("input").first().val(), $("input:nth-of-type(2)").val(), $("option:selected").val() );}));
+       }
         $.createFamilyTree();
-        $.addNewMember("Guillaume", "Salva");
-        $.addNewMember("Arielle", "Snizt");
-        $.addNewMember("Fanette", "Snizt");
-        $.addNewMember("Gerard", "Snizt");
-        $.addNewMember("Victor", "Salva");
+        $.createForm();
       });
       </script>
     </body>
